trunk/Archive2/a4/b37b740f16a017/output
main.cpp:26:18: error: no matching function for call to 'add'
              << add(std::string("Hello"), std::string(" World")) << '\n'; // fancy error
                 ^~~
main.cpp:13:59: note: candidate template ignored: disabled by 'enable_if' [with T = std::basic_string<char>]
template<typename T, typename U = typename std::enable_if<std::is_arithmetic<T>::value>::type>
                                                          ^
1 error generated.
